se cambian los nombres a html

--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
 </head>
 
 <body>
-	<h1>Menu de pruebas</h1>
+	<h1>Menu de pokemones</h1>
 	<ul list-style-type="none" padding="0">
-		<li><a href="pokemon.html"><span>Bulbasaur</span></a></li>
-		<li><a href="pokemon-two-colums.html"><span>Dos columnas</span></a></li>
+		<li><a href="bulbasaur.html"><span>Bulbasaur</span></a></li>
+		<li><a href="venusaur.html"><span>Venusaur</span></a></li>
 
 
 
