--- a/venusaur.html
+++ b/venusaur.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8" />
-  <title>Two-column statblock example</title>
+  <title>Venusaur</title>
   <link href="//fonts.googleapis.com/css?family=Noto+Sans:400,700,400italic,700italic" rel="stylesheet"
     type="text/css" />
   <link href="//fonts.googleapis.com/css?family=Libre+Baskerville:700" rel="stylesheet" type="text/css" />
@@ -324,7 +324,7 @@
       createCustomElement('property-block', templateElement.content);
     }</script><stat-block data-two-column="" style="--data-content-height: 672px;">
     <creature-heading>
-      <h1>Werewolf Alpha</h1>
+      <h1>Venusaur</h1>
       <h2>Medium humanoid (human, shapechanger), chaotic evil</h2>
     </creature-heading>
 
