se añaden pokemones basicos al menu

--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
 	<h1>Menu de pokemones</h1>
 	<ul list-style-type="none" padding="0">
 		<li><a href="bulbasaur.html"><span>Bulbasaur</span></a></li>
-		<li><a href="ivysaur.html"><span>Venusaur</span></a></li>
+		<li><a href="ivysaur.html"><span>Ivysaur</span></a></li>
 		<li><a href="venusaur.html"><span>Venusaur</span></a></li>
-		<li><a href="charmander.html"><span>Venusaur</span></a></li>
-		<li><a href="charmeleon.html"><span>Venusaur</span></a></li>
-		<li><a href="charizard.html"><span>Venusaur</span></a></li>
-		<li><a href="squirtle.html"><span>Venusaur</span></a></li>
-		<li><a href="wartortle.html"><span>Venusaur</span></a></li>
-		<li><a href="blastoice.html"><span>Venusaur</span></a></li>
+		<li><a href="charmander.html"><span>Charmander</span></a></li>
+		<li><a href="charmeleon.html"><span>Charmeleon</span></a></li>
+		<li><a href="charizard.html"><span>Charizard</span></a></li>
+		<li><a href="squirtle.html"><span>Squirtle</span></a></li>
+		<li><a href="wartortle.html"><span>Wartortle</span></a></li>
+		<li><a href="blastoice.html"><span>Blastoice</span></a></li>
 
 
 
