--- a/charmander.html
+++ b/charmander.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8" />
-  <title>Venusaur</title>
+  <title>Charmander</title>
   <link href="//fonts.googleapis.com/css?family=Noto+Sans:400,700,400italic,700italic" rel="stylesheet"
     type="text/css" />
   <link href="//fonts.googleapis.com/css?family=Libre+Baskerville:700" rel="stylesheet" type="text/css" />
@@ -119,9 +119,25 @@
       ::slotted(*:last-child) {
         margin-bottom: 0;
       }
+
+      .divImagen {
+        display: flex;
+        justify-content: right;
+        position: relative;
+
+      }
+
+      .pokeImagen {
+        position: absolute;
+        justify-content: center;
+      }
     </style>
     <div class="bar"></div>
+    <!--Imagen del pokemon-->
     <div id="content-wrap">
+      <div class="divImagen">
+        <img class="pokeImagen" src="img/4.png" alt="" width="150px" height="150px">
+      </div>
       <slot></slot>
     </div>
     <div class="bar"></div>
@@ -200,19 +216,19 @@
     <table>
       <tbody>
         <tr>
-          <th>STR</th>
-          <th>DEX</th>
+          <th>FUE</th>
+          <th>DES</th>
           <th>CON</th>
           <th>INT</th>
-          <th>WIS</th>
+          <th>SAB</th>
           <th>CHA</th>
         </tr>
         <tr>
-          <td id="str"></td>
-          <td id="dex"></td>
+          <td id="fue"></td>
+          <td id="des"></td>
           <td id="con"></td>
           <td id="int"></td>
-          <td id="wis"></td>
+          <td id="sab"></td>
           <td id="cha"></td>
         </tr>
       </tbody>
@@ -322,131 +338,116 @@
   <script>{
       let templateElement = document.getElementById('property-block');
       createCustomElement('property-block', templateElement.content);
-    }</script><stat-block data-two-column="" style="--data-content-height: 672px;">
+    }</script><stat-block>
     <creature-heading>
-      <h1>Venusaur</h1>
-      <h2>Tipo planta, Grande</h2>
+      <!-- NOMBRE Y TIPO DE CRIATURA -->
+      <h1>Charmander</h1>
+      <h2>Tipo fuego, pequeño</h2>
     </creature-heading>
 
+
+    <!-- ESTADISTICAS BASE -->
     <top-stats>
       <property-line>
-        <h4>Armor Class</h4>
-        <p>14 (armor scraps) in humanoid form, 16 (natural armor) in wolf
-          or hybrid form</p>
+        <h4>Clase de armadura</h4>
+        <p>13</p>
       </property-line>
       <property-line>
-        <h4>Hit Points</h4>
-        <p>119 (14d8 + 56)</p>
+        <h4>Puntos de golpe</h4>
+        <p>20</p>
       </property-line>
       <property-line>
-        <h4>Speed</h4>
-        <p>30 ft. (40 ft. in wolf form)</p>
+        <h4>Dado de golpe</h4>
+        <p>d6</p>
+      </property-line>
+      <property-line>
+        <h4>Velocidad</h4>
+        <p>30ft (6 casillas)</p>
+      </property-line>
+      <property-line>
+        <h4>Competencia</h4>
+        <p>+2</p>
       </property-line>
 
-      <abilities-block data-cha="15" data-con="18" data-dex="15" data-int="11" data-str="20"
-        data-wis="14"></abilities-block>
+
+      <!-- PUNTUACIONES DE CARACTERISTICAS -->
+      <abilities-block data-fue="14" data-des="16" data-con="11" data-int="6" data-sab="11" data-cha="10">
+      </abilities-block>
+
+      <!-- CARACTERISTICAS PASIVAS -->
       <property-line>
-        <h4>Saving Throws</h4>
-        <p>Str +9, Con +8, Wis +6</p>
+        <h4>Tiradas de salvacion</h4>
+        <p>Destreza</p>
       </property-line>
       <property-line>
-        <h4>Skills</h4>
-        <p>Athletics +9, Perception +6</p>
+        <h4>Recistencias</h4>
+        <p>Fuego, Hielo, Planta, Insecto ,Acero</p>
       </property-line>
       <property-line>
-        <h4>Damage Immunities</h4>
-        <p>bludgeoning, piercing, and slashing damage from nonmagical weapons
-          that aren't silvered</p>
+        <h4>Debilidades</h4>
+        <p>Agua, Tierra, Roca</p>
       </property-line>
       <property-line>
-        <h4>Senses</h4>
-        <p>passive Perception 16</p>
+        <h4>Condiciones inmunes</h4>
+        <p>Quemado</p>
       </property-line>
       <property-line>
-        <h4>Languages</h4>
-        <p>Common (can't speak in wolf form)</p>
+        <h4>Sentidos</h4>
+        <p>Vision en la oscuridad 60 ft, Percepcion pasiva 6</p>
       </property-line>
       <property-line>
-        <h4>Challenge</h4>
-        <p>9 (5,000 XP)</p>
+        <h4>Lenguajes</h4>
+        <p>Pokemon</p>
+      </property-line>
+      <property-line>
+        <h4>Nivel</h4>
+        <p>1</p>
       </property-line>
     </top-stats>
 
 
+    <!-- HABILIDADES -->
     <property-block>
-      <h4>Legendary Resistance (3/Day).</h4>
-      <p>If the werewolf fails a saving throw, it can choose to succeed
-        instead.</p>
+      <h4>Poder solar.</h4>
+      <p>Charmander gana un +2 a las tiradas de ataque mientras reciba luz solar </p>
+    </property-block>
+    <property-block>
+      <h4>Mar de llamas.</h4>
+      <p>Cuando la vida de charmander este por debajo del 25%, sus ataques de tipo fuego inflinjen 1d6 adicional.</p>
     </property-block>
 
-    <property-block>
-      <h4>Keen Hearing and Smell.</h4>
-      <p>The werewolf has advantage on Wisdom (Perception) checks that rely on
-        hearing or smell.</p>
-    </property-block>
+
+    <!-- ACCIONES -->
+    <h3>Acciones</h3>
 
     <property-block>
-      <h4>Pack Leader.</h4>
-      <p>The werewolf's allies have advantage on melee attack rolls against
-        any hostile creature within 5 feet of the werewolf.</p>
+      <h4>Multiataque.</h4>
+      <p>Charmander puede realizar 2 ataques basicos o 1 ataque especial</p>
     </property-block>
 
-    <property-block>
-      <h4>Shapechanger.</h4>
-      <p>The werewolf can use its action to polymorph into a wolf-humanoid
-        hybrid or into a wolf, or back into its true form, which is humanoid.
-        Its statistics, other than its AC, are the same in each form. Any
-        equipment it is wearing or carrying isn't transformed. It reverts to
-        its true form if it dies.</p>
-    </property-block>
-    <h3>Actions</h3>
+    <h3 style="font-size: 18px;">Ataques basicos</h3>
 
     <property-block>
-      <h4>Multiattack (Hybrid Form Only).</h4>
-      <p>The werewolf makes three attacks: one with its bite and two with its
-        claws.</p>
-    </property-block>
-
-    <property-block>
-      <h4>Bite (Wolf or Hybrid Form Only).</h4>
-      <p><i>Melee Weapon Attack:</i> +9 to hit, reach 5 ft., one target.
-        <i>Hit:</i> 14 (2d8 + 5) piercing damage. If the target is a humanoid,
-        it must succeed on a DC 14 Constitution saving throw or be cursed with
-        werewolf lycanthropy.
+      <h4>Arañazo </h4>
+      <p><i>Ataque cuerpo a cuerpo +5 a impactar </i><br>
+        <i>Alcance:</i> Un objetivo a 5ft<br>
+        <i>Hit:</i> 6 (1d6 + 3) daño cortante.
       </p>
     </property-block>
 
     <property-block>
-      <h4>Claws (Hybrid Form Only).</h4>
-      <p><i>Melee Weapon Attack:</i> +9 to hit, reach 5 ft., one target.
-        <i>Hit:</i> 16 (2d10 + 5) slashing damage.
+      <h4>Fire bolt</h4>
+      <p><i>Ataque rango +5 a impactar</i><br>
+        <i>Alcance:</i> Un objetivo a 150ft<br>
+        <i>Hit:</i> 1d10 daño de fuego.
+      </p>
+      <p>Lanza un proyectil de fuego a un objetivo, lo que provoca daño por fuego y puede encender objetos inflamables.<br>
+        El daño de este hechizo aumenta en 1d10 al alcanzar el nivel 5 (2d10), el nivel 11 (3d10) y el nivel 17 (4d10).
       </p>
     </property-block>
 
-    <h3>Legendary Actions</h3>
-    <p>The werewolf can take 3 legendary actions, choosing from the
-      options below. Only one legendary action option can be used at a
-      time and only at the end of another creature's turn. The werewolf
-      regains spent legendary actions at the start of its turn.</p>
+    <h3 style="font-size: 18px;">Ataques especiales</h3>
 
-    <property-line>
-      <h4>Leap.</h4>
-      <p>The werewolf moves up to its speed without provoking
-        opportunity attacks.</p>
-    </property-line>
-
-    <property-line>
-      <h4>Bark Orders.</h4>
-      <p>The werewolf chooses a friendly creature who can
-        see or hear it. That creature can use its reaction to move up to its
-        speed without provoking opportunity attacks.</p>
-    </property-line>
-
-    <property-line>
-      <h4>Frenzy (Costs 2 Actions).</h4>
-      <p>The werewolf can make one claw attack against each creature within 5
-        feet of it.</p>
-    </property-line>
   </stat-block>
 </body>
 
