se agrega el index

--- a/bulbasaur.html
+++ b/bulbasaur.html
@@ -440,16 +440,16 @@
       <h4>Latigo sepa </h4>
       <p><i>Ataque rango +5 a impactar</i><br>
         <i>Alcance:</i> Un objetivo a 15ft<br>
-        <i>Hit:</i> 5 (1d6 + 2) daño contundente/planta.
-      </p>
-      <p>Creas un largo látigo cubierto de espinas, que arremete contra una criatura dentro de alcance.
+        <i>Hit:</i> 5 (1d6 + 2) daño contundente/planta<br>
+        Creas un látigo cubierto de espinas, que arremete contra una criatura dentro de alcance
         Si golpea, la criatura sufre 1d6+Fue de daño perforante, y si es del mismo o menor tamaño que el lanzador,
-        atraes el objetivo hasta 10 ft en tu dirección.<br>
-        El daño aumenta en 1d6 al alcanzar los niveles 5 (2d6), 11 (3d6) y 17 (4d6).
+        atraes el objetivo hasta 10 ft en tu dirección<br>
+        <i>El daño aumenta en 1d6 al alcanzar los niveles 5 (2d6), 11 (3d6) y 17 (4d6)</i>
       </p>
     </property-block>
 
     <h3 style="font-size: 18px;">Ataques especiales</h3>
+    <p>Ninguno</p>
 
   </stat-block>
 </body>
