--- a/charmander.html
+++ b/charmander.html
@@ -447,6 +447,7 @@
     </property-block>
 
     <h3 style="font-size: 18px;">Ataques especiales</h3>
+    <p>Ninguno</p>
 
   </stat-block>
 </body>
