--- a/index.html
+++ b/index.html
@@ -5,25 +5,127 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Pokemon dyd</title>
+	<style>
+		@import "https://fonts.googleapis.com/css?family=Libre+Baskerville&display=swap";
+
+		body {
+			background: #f7ebcb;
+			font-family: Libre Baskerville, serif;
+			-webkit-font-smoothing: antialiased;
+			-moz-osx-font-smoothing: grayscale;
+			font-size: 16px
+		}
+
+		h1,h2,h3,h4,h5,h6 {
+			color: #7a2b17;
+			text-transform: uppercase;
+			line-height: 1.1;
+			margin: 24px 0 12px
+		}
+
+		h1:first-letter,h2:first-letter,h3:first-letter,h4:first-letter,h5:first-letter,h6:first-letter {
+			font-size: 150%
+		}
+
+		h1 {
+			font-size: 24px
+		}
+
+		h1,h2 {
+			border-bottom: 2px solid tan
+		}
+
+		p {
+			line-height: 1.4;
+			margin: 0
+		}
+
+		p+p {
+			text-indent: 24px;
+			margin-top: 0 !important
+		}
+
+		.box {
+			background-color: #fff;
+			padding: 16px;
+			border-left: 2px solid #000;
+			border-right: 2px solid #000;
+			overflow: hidden;
+			margin: 16px 0
+		}
+
+		html {
+			box-sizing: border-box;
+			padding: 0;
+			margin: 0
+		}
+
+		body {
+			padding: 0;
+			margin: 0
+		}
+
+		*,
+		:after,
+		:before {
+			box-sizing: inherit
+		}
+
+		main {
+			max-width: 800px;
+			margin: 0 auto;
+			padding: 0 12px
+		}
+	</style>
 </head>
 
 <body>
-	<h1>Menu de pokemones</h1>
-	<ul list-style-type="none" padding="0">
-		<li><a href="bulbasaur.html"><span>Bulbasaur</span></a></li>
-		<li><a href="ivysaur.html"><span>Ivysaur</span></a></li>
-		<li><a href="venusaur.html"><span>Venusaur</span></a></li>
-		<li><a href="charmander.html"><span>Charmander</span></a></li>
-		<li><a href="charmeleon.html"><span>Charmeleon</span></a></li>
-		<li><a href="charizard.html"><span>Charizard</span></a></li>
-		<li><a href="squirtle.html"><span>Squirtle</span></a></li>
-		<li><a href="wartortle.html"><span>Wartortle</span></a></li>
-		<li><a href="blastoice.html"><span>Blastoice</span></a></li>
+
+	<main>
+		<h1>Pokemon dyd</h1>
+		<p>Para implementar pokemon en dyd se necesitan 4 mecanicas</p>
+		<ul>
+			<li>Mecanicas de captura</li>
+			<li>Mecanicas de combate</li>
+			<li>Mecanicas de pokemones salvajes</li>
+			<li>Mecanicas de subida de nivel y aprender poderes</li>
+		</ul>
+
+		<h3>Mecanicas de captura</h3>
+		<p>Tail the bitey fur how prehensile pelt one. Tail nomadic fur the is beast then one is bitey snout then. How
+			scratchy nomadic at big pelt marsupial trees then opossum. The ears beast the trees at pelt fur solitary
+			then tlacuache nomadic. Trees prehensile then call at prehensile snout trees tlacuache.</p>
+
+		<h3>Mecanicas de subida de nivel</h3>
+		<p>Lorem opossum how fur then at big didelphimorph manicou tlacuache is. Scratchy fur tlacuache pelt consumed
+			tail at and hunted. Then marsupial snout tlacuache dangle hunted opossum fur bitey. Solitary is at what
+			manicou the at then prehensile trees fur consumed call snout. How where and fur nomadic call oil white a
+			and.</p>
+
+		<h3>Mecanicas de pokemones salvajes</h3>
+		<p>Tail the bitey fur how prehensile pelt one. Tail nomadic fur the is beast then one is bitey snout then. How
+			scratchy nomadic at big pelt marsupial trees then opossum. The ears beast the trees at pelt fur solitary
+			then tlacuache nomadic. Trees prehensile then call at prehensile snout trees tlacuache.</p>
 
 
+		<h3>Estadisticas de los pokemones</h3>
+		<section class="box">
+			<ul list-style-type="none" padding="0">
+				<li><a href="bulbasaur.html"><span>Bulbasaur</span></a></li>
+				<li><a href="ivysaur.html"><span>Ivysaur</span></a></li>
+				<li><a href="venusaur.html"><span>Venusaur</span></a></li>
+				<li><a href="charmander.html"><span>Charmander</span></a></li>
+				<li><a href="charmeleon.html"><span>Charmeleon</span></a></li>
+				<li><a href="charizard.html"><span>Charizard</span></a></li>
+				<li><a href="squirtle.html"><span>Squirtle</span></a></li>
+				<li><a href="wartortle.html"><span>Wartortle</span></a></li>
+				<li><a href="blastoice.html"><span>Blastoice</span></a></li>
+
+			</ul>
+		</section>
+	</main>
 
 
-	</ul>
 </body>
 
 </html>
