se agrega footer

--- a/index.html
+++ b/index.html
@@ -120,11 +120,11 @@
 				<li><a href="squirtle.html"><span>Squirtle</span></a></li>
 				<li><a href="wartortle.html"><span>Wartortle</span></a></li>
 				<li><a href="blastoice.html"><span>Blastoice</span></a></li>
-
 			</ul>
 		</section>
 	</main>
 
+	<footer>Creado por Genzo , todos los derechos reservados</footer>
 
 </body>
 
