agrega calculadora y yvisaur

--- a/index.html
+++ b/index.html
@@ -16,14 +16,33 @@
 			font-size: 16px
 		}
 
-		h1,h2,h3,h4,h5,h6 {
+		.container {
+			width: 100%;
+			height: 100vh;
+			background: #e3f9ff;
+			display: flex;
+			align-items: center;
+			justify-content: center;
+		}
+
+		h1,
+		h2,
+		h3,
+		h4,
+		h5,
+		h6 {
 			color: #7a2b17;
 			text-transform: uppercase;
 			line-height: 1.1;
 			margin: 24px 0 12px
 		}
 
-		h1:first-letter,h2:first-letter,h3:first-letter,h4:first-letter,h5:first-letter,h6:first-letter {
+		h1:first-letter,
+		h2:first-letter,
+		h3:first-letter,
+		h4:first-letter,
+		h5:first-letter,
+		h6:first-letter {
 			font-size: 150%
 		}
 
@@ -31,7 +50,8 @@
 			font-size: 24px
 		}
 
-		h1,h2 {
+		h1,
+		h2 {
 			border-bottom: 2px solid tan
 		}
 
@@ -90,39 +110,49 @@
 			<li>Mecanicas de pokemones salvajes</li>
 			<li>Mecanicas de subida de nivel y aprender poderes</li>
 		</ul>
+		<div class="cointainer">
 
-		<h3>Mecanicas de captura</h3>
-		<p>Tail the bitey fur how prehensile pelt one. Tail nomadic fur the is beast then one is bitey snout then. How
-			scratchy nomadic at big pelt marsupial trees then opossum. The ears beast the trees at pelt fur solitary
-			then tlacuache nomadic. Trees prehensile then call at prehensile snout trees tlacuache.</p>
+			<h3>Mecanicas de captura</h3>
+			<p>Tail the bitey fur how prehensile pelt one. Tail nomadic fur the is beast then one is bitey snout then.
+				How
+				scratchy nomadic at big pelt marsupial trees then opossum. The ears beast the trees at pelt fur solitary
+				then tlacuache nomadic. Trees prehensile then call at prehensile snout trees tlacuache.</p>
 
-		<h3>Mecanicas de subida de nivel</h3>
-		<p>Lorem opossum how fur then at big didelphimorph manicou tlacuache is. Scratchy fur tlacuache pelt consumed
-			tail at and hunted. Then marsupial snout tlacuache dangle hunted opossum fur bitey. Solitary is at what
-			manicou the at then prehensile trees fur consumed call snout. How where and fur nomadic call oil white a
-			and.</p>
+			<h3>Mecanicas de subida de nivel</h3>
+			<p>Lorem opossum how fur then at big didelphimorph manicou tlacuache is. Scratchy fur tlacuache pelt
+				consumed
+				tail at and hunted. Then marsupial snout tlacuache dangle hunted opossum fur bitey. Solitary is at what
+				manicou the at then prehensile trees fur consumed call snout. How where and fur nomadic call oil white a
+				and.</p>
 
-		<h3>Mecanicas de pokemones salvajes</h3>
-		<p>Tail the bitey fur how prehensile pelt one. Tail nomadic fur the is beast then one is bitey snout then. How
-			scratchy nomadic at big pelt marsupial trees then opossum. The ears beast the trees at pelt fur solitary
-			then tlacuache nomadic. Trees prehensile then call at prehensile snout trees tlacuache.</p>
+			<h3>Mecanicas de pokemones salvajes</h3>
+			<p>Tail the bitey fur how prehensile pelt one. Tail nomadic fur the is beast then one is bitey snout then.
+				How
+				scratchy nomadic at big pelt marsupial trees then opossum. The ears beast the trees at pelt fur solitary
+				then tlacuache nomadic. Trees prehensile then call at prehensile snout trees tlacuache.</p>
 
 
-		<h3>Estadisticas de los pokemones</h3>
-		<section class="box">
-			<ul list-style-type="none" padding="0">
-				<li><a href="bulbasaur.html"><span>Bulbasaur</span></a></li>
-				<li><a href="ivysaur.html"><span>Ivysaur</span></a></li>
-				<li><a href="venusaur.html"><span>Venusaur</span></a></li>
-				<li><a href="charmander.html"><span>Charmander</span></a></li>
-				<li><a href="charmeleon.html"><span>Charmeleon</span></a></li>
-				<li><a href="charizard.html"><span>Charizard</span></a></li>
-				<li><a href="squirtle.html"><span>Squirtle</span></a></li>
-				<li><a href="wartortle.html"><span>Wartortle</span></a></li>
-				<li><a href="blastoice.html"><span>Blastoice</span></a></li>
-			</ul>
-		</section>
+			<h3>Estadisticas de los pokemones</h3>
+			<section class="box">
+				<ul list-style-type="none" padding="0">
+					<li><a href="bulbasaur.html"><span>Bulbasaur</span></a></li>
+					<li><a href="ivysaur.html"><span>Ivysaur</span></a></li>
+					<li><a href="venusaur.html"><span>Venusaur</span></a></li>
+					<li><a href="charmander.html"><span>Charmander</span></a></li>
+					<li><a href="charmeleon.html"><span>Charmeleon</span></a></li>
+					<li><a href="charizard.html"><span>Charizard</span></a></li>
+					<li><a href="squirtle.html"><span>Squirtle</span></a></li>
+					<li><a href="wartortle.html"><span>Wartortle</span></a></li>
+					<li><a href="blastoice.html"><span>Blastoice</span></a></li>
+				</ul>
+			</section>
+
+
+		</div>
+
 	</main>
+
+
 
 	<footer>Creado por Genzo , todos los derechos reservados</footer>
 
