--- a/bulbasaur.html
+++ b/bulbasaur.html
@@ -402,8 +402,8 @@
         <p>Vision en la oscuridad 60 ft, Percepcion pasiva 6</p>
       </property-line>
       <property-line>
-        <h4>Lenguajes</h4>
-        <p>Pokemon</p>
+        <h4>Tirada de salvacion magica</h4>
+        <p>10</p>
       </property-line>
     </top-stats>
 
@@ -442,7 +442,7 @@
       <h4 style="color: forestgreen;">Latigo sepa </h4>
       <p><i>Ataque rango +4 a impactar</i><br>
         <i>Alcance:</i> Un objetivo a 15ft<br>
-        <i>Hit:</i> 5 (1d6 + 2) daño planta<br>
+        <i>Hit:</i>1d6 daño planta<br>
         Creas un látigo cubierto de espinas, que arremete contra una criatura dentro de alcance
         Si golpea, la criatura sufre 1d6+Fue de daño perforante, y si es del mismo o menor tamaño que el lanzador,
         atraes el objetivo hasta 10 ft en tu dirección<br>
