--- a/charmanderlv5.html
+++ b/charmanderlv5.html
@@ -350,11 +350,11 @@
     <top-stats>
       <property-line>
         <h4>Clase de armadura</h4>
-        <p>13</p>
+        <p>15</p>
       </property-line>
       <property-line>
         <h4>Puntos de golpe</h4>
-        <p>20</p>
+        <p>36</p>
       </property-line>
       <property-line>
         <h4>Dado de golpe</h4>
@@ -366,12 +366,12 @@
       </property-line>
       <property-line>
         <h4>Competencia</h4>
-        <p>+2</p>
+        <p>+3</p>
       </property-line>
 
 
       <!-- PUNTUACIONES DE CARACTERISTICAS -->
-      <abilities-block data-fue="14" data-des="16" data-con="11" data-int="6" data-sab="11" data-cha="10">
+      <abilities-block data-fue="14" data-des="18" data-con="11" data-int="6" data-sab="11" data-cha="10">
       </abilities-block>
 
       <!-- CARACTERISTICAS PASIVAS -->
@@ -396,12 +396,12 @@
         <p>Vision en la oscuridad 60 ft, Percepcion pasiva 6</p>
       </property-line>
       <property-line>
-        <h4>Lenguajes</h4>
-        <p>Pokemon</p>
+        <h4>Tirada de salvacion magica</h4>
+        <p>11</p>
       </property-line>
       <property-line>
         <h4>Nivel</h4>
-        <p>1</p>
+        <p>5</p>
       </property-line>
     </top-stats>
 
@@ -430,9 +430,9 @@
     <h3 style="font-size: 18px;">Ataques basicos</h3>
     <property-block>
       <h4>Arañazo </h4>
-      <p><i>Ataque cuerpo a cuerpo +5 a impactar </i><br>
+      <p><i>Ataque cuerpo a cuerpo +7 a impactar </i><br>
         <i>Alcance:</i> Un objetivo a 5ft<br>
-        <i>Hit:</i> 6 (1d6 + 3) daño cortante.
+        <i>Hit:</i> 6 (1d6 + 4) daño cortante.
       </p>
     </property-block>
 
@@ -440,12 +440,12 @@
     <!--Ataques especiales-->
     <h3 style="font-size: 18px;">Ataques especiales</h3>
     <property-block>
-      <h4 style="color: crimson;">Fire bolt</h4>
-      <p><i>Ataque rango +5 a impactar</i><br>
+      <h4 style="color:crimson;">Fire bolt</h4>
+      <p><i>Ataque rango +7 a impactar</i><br>
         <i>Alcance:</i> Un objetivo a 150ft<br>
-        <i>Hit:</i> 1d10 daño de fuego.<br>
+        <i>Hit:</i> 2d10 daño de fuego<br>
         Lanza un proyectil de fuego a un objetivo, lo que provoca daño por fuego y puede encender objetos inflamables.<br>
-        El daño de este hechizo aumenta en 1d10 al alcanzar el nivel 5 (2d10), el nivel 11 (3d10) y el nivel 17 (4d10).
+        <i>El daño de este hechizo aumenta en 1d10 al alcanzar el nivel 5 (2d10), el nivel 11 (3d10) y el nivel 17 (4d10).</i>
       </p>
     </property-block>
 
