--- a/index.html
+++ b/index.html
@@ -96,6 +96,17 @@
 			margin: 0 auto;
 			padding: 0 12px
 		}
+
+
+		.footer{
+    	display: table;
+		font-size: 150%;
+		color: #7a2b17;
+		text-transform: uppercase;
+    	text-align: center;
+    	margin-left: auto;
+    	margin-right: auto;
+		}
 	</style>
 </head>
 
@@ -105,10 +116,10 @@
 		<h1>Pokemon dyd</h1>
 		<p>Para implementar pokemon en dyd se necesitan 4 mecanicas</p>
 		<ul>
-			<li>Mecanicas de captura</li>
-			<li>Mecanicas de combate</li>
-			<li>Mecanicas de pokemones salvajes</li>
-			<li>Mecanicas de subida de nivel y aprender poderes</li>
+			<li><a href="#">Mecanicas de captura</a></li>
+			<li><a href="#">Mecanicas de combate</a></li>
+			<li><a href="#">Mecanicas de pokemones salvajes</a></li>
+			<li><a href="#">Mecanicas de subida de nivel y aprender poderes</a></li>
 		</ul>
 		<div class="cointainer">
 
@@ -136,9 +147,11 @@
 			<section class="box">
 				<ul list-style-type="none" padding="0">
 					<li><a href="bulbasaur.html"><span>Bulbasaur</span></a></li>
+					<li><a href="bulbasaurlv5.html"><span>BulbasaurLv5</span></a></li>
 					<li><a href="ivysaur.html"><span>Ivysaur</span></a></li>
 					<li><a href="venusaur.html"><span>Venusaur</span></a></li>
 					<li><a href="charmander.html"><span>Charmander</span></a></li>
+					<li><a href="charmanderlv5.html"><span>CharmanderLv5</span></a></li>
 					<li><a href="charmeleon.html"><span>Charmeleon</span></a></li>
 					<li><a href="charizard.html"><span>Charizard</span></a></li>
 					<li><a href="squirtle.html"><span>Squirtle</span></a></li>
@@ -154,7 +167,7 @@
 
 
 
-	<footer>Creado por Genzo , todos los derechos reservados</footer>
+	<div class="footer">Creado por Genzo</div>
 
 </body>
 
