--- a/bulbasaur.html
+++ b/bulbasaur.html
@@ -444,7 +444,7 @@
         <i>Alcance:</i> Un objetivo a 15ft<br>
         <i>Hit:</i>1d6 daño planta<br>
         Creas un látigo cubierto de espinas, que arremete contra una criatura dentro de alcance
-        Si golpea, la criatura sufre 1d6+Fue de daño perforante, y si es del mismo o menor tamaño que el lanzador,
+        Si golpea, la criatura sufre 1d6 de daño perforante, y si es del mismo o menor tamaño que el lanzador,
         atraes el objetivo hasta 10 ft en tu dirección<br>
         <i>El daño aumenta en 1d6 al alcanzar los niveles 5 (2d6), 11 (3d6) y 17 (4d6)</i>
       </p>
