--- a/index.html
+++ b/index.html
@@ -355,7 +355,7 @@
 					<h6>Links de interes</h6>
 					<ul class="nospace linklist">
 						<li>
-							<a href="#">Quis blandit dignissim</a>
+							<a href="calcualdora.html">calculadora</a>
 						</li>
 						
 					</ul>
